syntax = "proto3";

//PATH="${PATH}:${HOME}/go/bin" protoc --go_out=plugins=grpc:. *.proto

option go_package = "/userGrpc";
package userGrpc;

message UserId {
    string ID = 1;
}

message UpdateUserPasswordRequest {
    string ID = 1;
    string password = 2;
}

message User {
    string ID = 1;
    string Name = 2;
    string Surname = 3;
    string Mail = 4;
    string Password = 5;
    string About = 6;
    string ImgUrl = 7;
}

message Users {
    repeated User users = 1;
}

message EventId {
    string ID = 1;
}

message SubscribeRequest {
    string SubscribedId = 1;
    string SubscriberId = 2;
}

message IsSubscribedRequest {
    bool Result = 1;
}

message Empty {}

service UserService {
    rpc GetUserById(UserId) returns (User) {}
    rpc UpdateUserInfo(User) returns (Empty) {}
    rpc UpdateUserPassword(UpdateUserPasswordRequest) returns (Empty) {}
    rpc GetSubscribers(UserId) returns (Users) {}
    rpc GetSubscribes(UserId) returns (Users) {}
    rpc GetFriends(UserId) returns (Users) {}
    rpc GetVisitors(EventId) returns (Users) {}
    rpc Subscribe(SubscribeRequest) returns (Empty) {}
    rpc Unsubscribe(SubscribeRequest) returns (Empty) {}
    rpc IsSubscribed(SubscribeRequest) returns (IsSubscribedRequest) {}
}